...
          child: Row(
            spacing: 8,
            children: [const Icon(Icons.copy), Text(t.grid.actionMenu.duplicate)],
          ),
        ),
        PopupMenuItem<Object>(
          key: const Key('grid-item-delete'),
          value: _CharacterGridItemActionEnum.delete,
          child: Row(
            spacing: 8,
            children: [
              Icon(Icons.delete, color: Theme.of(context).colorScheme.error),
              Text(
...
