{
  "actions": {
    "delete": "Delete",
    "ok": "OK",
    "cancel": "Cancel",
    "save": "Save",
    "tryAgain": "Try Again",
    "close": "Close"
  },
  "appSearchField": {
    "hint": "Search..."
  },
...
